CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/../build/cmake")

include(DefineOptions)

#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(message)
ADD_SUBDIRECTORY(zeromq)
ADD_SUBDIRECTORY(rpc)
ADD_SUBDIRECTORY(json)
ADD_SUBDIRECTORY(log)
ADD_SUBDIRECTORY(dbclient)
ADD_SUBDIRECTORY(msgpool)
ADD_SUBDIRECTORY(service)