PROJECT(lspf)

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_LOCAL_PATH}/cmake")

message("Build CMAKE_MODULE_PATH:" ${CMAKE_MODULE_PATH})

include(DefineOptions)

# include directories
INCLUDE_DIRECTORIES()

# lib directories
LINK_DIRECTORIES()

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(message)
ADD_SUBDIRECTORY(rpc)
ADD_SUBDIRECTORY(log)
ADD_SUBDIRECTORY(transport)
